tests for ws ant tasks Signed-off-by:Lukas Jungmann <lukas.jungmann@oracle.com>